--- a/assets/css/_layouts.scss
+++ b/assets/css/_layouts.scss
@@ -973,6 +973,29 @@ body[dir="rtl"] .site-menu {
     }
   }
 
+  .i18n-button {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .i18n-selector {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
+
+    option {
+      color: var(--body-font-color);
+      font-size: 14px;
+      background: var(--body-background);
+    }
+  }
+
   // Desktop: default expanded
   @media screen and (min-width: breakpoint(menu)) {
     #toolbar-toggle:checked ~ .toolbar-items {
