--- a/layouts/_partials/menu/recent-posts.html
+++ b/layouts/_partials/menu/recent-posts.html
@@ -2,7 +2,9 @@
 <div class="recent-posts">
   <div class="recent-post-label">
     <i class="fa-solid fa-clock"></i>
-    <span>{{ i18n "Recent Posts" | default "Recent posts" }}</span>
+    <span data-i18n-id="menu.recent.posts" data-i18n-text>
+      {{- i18n "menu.recent.posts" | default "Recent posts" -}}
+    </span>
   </div>
 
   <ul class="recent-post-list">
