--- a/layouts/_partials/pagination.html
+++ b/layouts/_partials/pagination.html
@@ -23,11 +23,17 @@
   {{/* Previous group button */}}
   {{ if gt $groupStart 1 }}
   <a href="{{ $paginate.First.URL }}{{ if gt $prevGroupPage 1 }}page/{{ $prevGroupPage }}/{{ end }}#pagination-anchor" class="pagination-nav pagination-link">
-    <i class="fa-solid fa-backward"></i> {{ i18n "Previous Page" | default "PREV" }}
+    <i class="fa-solid fa-backward"></i>
+    <span data-i18n-id="post.prev.link" data-i18n-text>
+      {{- i18n "post.prev.link" | default "PREV" -}}
+    </span>
   </a>
   {{ else }}
   <span class="pagination-nav disabled">
-    <i class="fa-solid fa-backward"></i> {{ i18n "Previous Page" | default "PREV" }}
+    <i class="fa-solid fa-backward"></i>
+    <span data-i18n-id="post.prev.link" data-i18n-text>
+      {{- i18n "post.prev.link" | default "PREV" -}}
+    </span>
   </span>
   {{ end }}
 
@@ -47,11 +53,17 @@
   {{/* Next group button */}}
   {{ if le $nextGroupPage $totalPages }}
   <a href="{{ $paginate.First.URL }}page/{{ $nextGroupPage }}/#pagination-anchor" class="pagination-nav pagination-link">
-    {{ i18n "Next Page" | default "NEXT" }} <i class="fa-solid fa-forward"></i>
+    <span data-i18n-id="post.next.link" data-i18n-text>
+      {{- i18n "post.next.link" | default "NEXT" -}}
+    </span>
+    <i class="fa-solid fa-forward"></i>
   </a>
   {{ else }}
   <span class="pagination-nav disabled">
-    {{ i18n "Next Page" | default "NEXT" }} <i class="fa-solid fa-forward"></i>
+    <span data-i18n-id="post.next.link" data-i18n-text>
+      {{- i18n "post.next.link" | default "NEXT" -}}
+    </span>
+    <i class="fa-solid fa-forward"></i>
   </span>
   {{ end }}
 
