--- a/layouts/categories/terms.html
+++ b/layouts/categories/terms.html
@@ -7,9 +7,16 @@
   {{ $leafCount = add $leafCount (cond $treeL2 (len $treeL2) 1) }}
 {{ end }}
 <header class="list-header">
-  <h1><i class="fa-solid fa-folder"></i> {{ i18n "Categories" | default "Categories" }}</h1>
-  {{- $count := printf `<em class="list-count">%d</em>` $leafCount -}}
-  <p>{{ printf (i18n "Categories Label" | default "%s categories") $count | safeHTML }}</p>
+  <h1>
+    <i class="fa-solid fa-folder"></i>
+    <span data-i18n-id="categories.terms.title" data-i18n-text>
+      {{- i18n "categories.terms.title" | default "Categories" -}}
+    </span>
+  </h1>
+  <p data-i18n-id="categories.count.label" data-i18n-text='{"%s": "$.list-count"}'>
+    {{- $count := printf `<em class="list-count">%d</em>` $leafCount -}}
+    {{- printf (i18n "categories.count.label" | default "%s categories") $count | safeHTML -}}
+  </p>
 </header>
 {{/* Categories list for parent category */}}
 <div class="categories-tree">
@@ -70,7 +77,9 @@
                 <li>
                   <a href="/search/?category1={{ $category1 }}&category2={{ $category2 }}" class="category-post more">
                     <i class="fa-solid fa-magnifying-glass"></i>
-                    {{ printf (i18n "More Label" | default "See all %d results") (len $pagesL2) -}}
+                    <span data-i18n-id="search.more.label" data-i18n-text='{{ jsonify (dict "%d" (len $pagesL2)) }}'>
+                      {{- printf (i18n "search.more.label" | default "See all %d results") (len $pagesL2) -}}
+                    </span>
                   </a>
                 </li>
               {{ end }}
@@ -99,7 +108,9 @@
           <li>
             <a href="/search/?category1={{ $category1 }}" class="category-post more">
               <i class="fa-solid fa-magnifying-glass"></i>
-              {{ printf (i18n "More Label" | default "See all %d results") (len $pagesL1) -}}
+              <span data-i18n-id="search.more.label" data-i18n-text='{{ jsonify (dict "%d" (len $pagesL1)) }}'>
+                {{- printf (i18n "search.more.label" | default "See all %d results") (len $pagesL1) -}}
+              </span>
             </a>
           </li>
         {{ end }}
