--- a/assets/css/variables/_colors.scss
+++ b/assets/css/variables/_colors.scss
@@ -50,7 +50,7 @@ $hint-colors: (
   --color-link: #8ecfff;
   --color-visited-link: #a7aaff;
   --color-page-link: black;
-  --color-social-link: #222;
+  --color-disabled-link: #222;
   --link-background: rgba(0, 85, 187, 0.1);
 
   --body-background: #181a1b;
