--- a/assets/css/_layouts.scss
+++ b/assets/css/_layouts.scss
@@ -630,6 +630,45 @@ body[dir="rtl"] .site-menu {
   }
 }
 
+.image-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  text-align: center;
+  z-index: z-index(image-overlay);
+  cursor: zoom-out;
+  display: none;
+
+  &:has(img) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  img {
+    width: auto;
+    height: auto;
+    max-width: 100vw;
+    max-height: 100vh;
+    object-fit: contain;
+    transform: none;
+    transform-origin: center center;
+    display: block;
+  }
+
+  img.landscape {
+    // Mobile: rotate landscape images */
+    @media (orientation: portrait) {
+      transform: rotate(90deg);
+      max-width: 100vh;
+      max-height: 100vw;
+    }
+  }
+}
+
 /* Footer */
 
 .site-footer {
