--- a/layouts/_shortcodes/image.html
+++ b/layouts/_shortcodes/image.html
@@ -14,20 +14,28 @@
 {{- with .Get "width" -}}{{- $size = $size | append (print "width: " .) -}}{{- end -}}
 {{- with .Get "min-width" -}}{{- $size = $size | append (print "min-width: " .) -}}{{- end -}}
 {{- with .Get "max-width" -}}{{- $size = $size | append (print "max-width: " .) -}}{{- end -}}
-{{- with .Get "height" | default "auto" -}}{{- $size = $size | append (print "height: " .) -}}{{- end -}}
+{{- with .Get "height" -}}{{- $size = $size | append (print "height: " .) -}}{{- end -}}
 {{- with .Get "min-height" -}}{{- $size = $size | append (print "min-height: " .) -}}{{- end -}}
 {{- with .Get "max-height" -}}{{- $size = $size | append (print "max-height: " .) -}}{{- end -}}
+{{- /* --- Id: global ordinal counter for images --- */ -}}
+{{- $imgOrdinal := .Page.Scratch.Get "sc-image-ordinal" -}}
+{{- if not $imgOrdinal -}}
+  {{- $imgOrdinal = 0 -}}
+{{- end -}}
+{{- $imgOrdinal = add $imgOrdinal 1 -}}
+{{- .Page.Scratch.Set "sc-image-ordinal" $imgOrdinal -}}
 {{- /* --- Render --- */ -}}
-<label class="sc-image" for="sc-image-toggle-{{ .Ordinal }}" {{- with $align }}style="text-align: {{ . }};"{{ end -}}>
+<label class="sc-image" for="sc-image-toggle-{{ $imgOrdinal }}" {{- with $align }}style="text-align: {{ . }};"{{ end -}}>
   {{- with $caption -}}<figure>{{- end -}}
   {{- if $href -}}
   <a href="{{ $href }}" target="{{ $target }}">
   {{- else -}}
-  <input class="hidden toggle" type="checkbox" id="sc-image-toggle-{{ .Ordinal }}" />
+  <input class="hidden toggle" type="checkbox" id="sc-image-toggle-{{ $imgOrdinal }}" />
   {{- end -}}
   <img src="{{ $src }}"
     {{- with $alt }}alt="{{ . }}"{{ end -}}
     {{- with $class }}class="{{ . }}"{{ end -}}
+    id="sc-image-{{ $imgOrdinal }}"
     {{- with $title }}title="{{ . }}"{{ end -}}
     loading="{{ $loading | default `lazy` }}"
     decoding="async"
